--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Título da Minha Página">
+    <meta property="og:description" content="Descrição resumida do meu site.">
+    <meta property="og:image" content="https://meusite.com/imagem.jpg">
+    <meta property="og:url" content="https://meusite.com">
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
