--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta property="og:title" content="Título da Minha Página">
-    <meta property="og:description" content="Descrição resumida do meu site.">
+    <meta property="og:title" content="Leli Newborn Care">
+    <meta property="og:description" content="Giving parents the opportunity to rest ...and navigate parenthood with confidence!">
     <meta property="og:image" content="https://my-business-links.vercel.app/image.jpg">
     <meta property="og:url" content="https://my-business-links.vercel.app/">
     <meta charset="UTF-8"> 
