--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 I love traveling to new places and visiting Brazil to spend quality time with my beloved family.
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/NCS_BLACK2.png" alt="Foto do site">
+        <img class="apresentacao__imagem" src="./assets/Foto_Business.png" alt="Foto do site">
     </main>
     
     <footer class="rodape">
