--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta property="og:title" content="Leli Newborn Care">
-    <meta property="og:description" content="Giving parents the opportunity to rest ...and navigate parenthood with confidence!">
+    <meta property="og:description" content="Giving parents the opportunity to rest...And navigate parenthood with confidence!">
     <meta property="og:image" content="https://my-business-links.vercel.app/image.jpg">
     <meta property="og:url" content="https://my-business-links.vercel.app/">
     <meta charset="UTF-8"> 
